# Portly

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  build.py  install.ps1  install.sh  pyproject.toml  uninstall.ps1
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
assets/branding/: README.md
portly/: __init__.py  __main__.py  api.py  cli.py  config.py  discovery.py  proxy.py  registry.py  server.py  service.py  tls.py  updater.py  web_server.py
scripts/: build.py  check.py  dev-setup.ps1  dev-setup.sh  dev.py  dev.sh  uninstall.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  main.tsx
web/src/components/: PortlyLogo.tsx
web/src/lib/: api.ts
web/src/pages/: Aliases.tsx  Overview.tsx  Services.tsx  Settings.tsx  Stacks.tsx
